# natural-language-analysis

./: CMakeLists.txt  README.md  input.txt  main.c
includes/: auxiliary.h  certainty.h  line.h  morph.h  parser.h  root.h  size.h  word.h
latex/: annotated.tex  refman.tex  structCertainty.tex  structLine.tex  structMorpho.tex  structRoot.tex  structSize.tex  structWord.tex
src/: histogram.c  parser.c
src/models/: certainty.c  line.c  morpho.c  root.c  size.c  word.c
